--- a/lerna.json
+++ b/lerna.json
@@ -1,15 +1,7 @@
 {
   "lerna": "2.11.0",
   "packages": [
-    "packages/*",
-    "projects/*"
+    "packages/*"
   ],
-  "command": {
-    "publish": {
-      "ignoreChanges": [
-        "projects/*"
-      ]
-    }
-  },
-  "version": "0.0.1"
+  "version": "0.0.2"
 }
