--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "npm-publish": "ng build login-facebook && ng build login-google && lerna publish",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
